# uav-gcs

./: .gitignore  CMakeLists.txt  PROJECT_SPEC.md  README.md
config/: network.toml  ui.toml
src/: main.cpp  video_main.cpp
src/app/: VideoViewerApp.cpp  VideoViewerApp.hpp
src/common/: NetworkConfig.cpp  NetworkConfig.hpp
src/network/: UdpTelemetryReceiver.cpp  UdpTelemetryReceiver.hpp
src/protocol/: TelemetryMessage.cpp  TelemetryMessage.hpp
src/ui/: VideoWindow.cpp  VideoWindow.hpp  VideoWindowWin32.cpp
src/video/: GcsDiscoveryBeacon.cpp  GcsDiscoveryBeacon.hpp  JpegFrameReassembler.cpp  JpegFrameReassembler.hpp  UdpMjpegReceiver.cpp  UdpMjpegReceiver.hpp  VideoPacket.cpp  VideoPacket.hpp
tools/: log_replayer.cpp  mock_onboard.cpp
